GUI finished, bug fix